--- a/twentytwenty-child/style.css
+++ b/twentytwenty-child/style.css
@@ -8,6 +8,6 @@ Description: Our default theme for 2020 is designed to take full advantage of th
 Tags: blog,one-column,custom-background,custom-colors,custom-logo,custom-menu,editor-style,featured-images,footer-widgets,full-width-template,rtl-language-support,sticky-post,theme-options,threaded-comments,translation-ready,block-styles,wide-blocks,accessibility-ready
 Version: 1.0.1601498716
 Updated: 2020-09-30 20:45:16
-GitHub Theme URI: https://github.com/ebruckner15/githubupdatertest2.0
+GitHub Theme URI: https://github.com/ebruckner15/githubupdatertest2.0/
 */
 
