--- a/style.css
+++ b/style.css
@@ -11,3 +11,6 @@ Updated: 2020-09-30 20:45:16
 GitHub Theme URI: https://github.com/ebruckner15/twentytwenty-child
 */
 
+body{
+    background: purple;
+}
